apply plugin: 'com.android.application'

//def keystorePropertiesFile = rootProject.file("keystore.properties")
//def keystoreProperties = new Properties()
//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

android {
    namespace "eu.faircode.xlua"
    compileSdk 36
    buildToolsVersion "35.0.0"

    compileOptions {
        // Keep the legacy Lua sources compatible: they contain identifiers (for
        // example `yield`) that became restricted in newer Java source levels.
        // JDK 17 still compiles the project, while the source language remains 8.
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    defaultConfig {
        applicationId "eu.faircode.xlua"
        // libxposed API 101 targets Android 8.0+; this branch is validated for Android 14+.
        minSdk 26
        // The legacy AppCompat screens do not yet consume system-bar insets.
        // Target 35+ enforces edge-to-edge and places action items below the
        // status bar, so stay on 34 until the Material 3 UI migration is ready.
        targetSdk 34
        versionCode 158
        versionName "1.5.8"
        // The Android package version and the XPL command protocol are separate.
        // Changing versionCode must not silently change bridge compatibility.
        buildConfigField "String", "BRIDGE_VERSION", '"1.5.5"'
        archivesBaseName = "XPL-EX-NEXT-$versionName"
    }

    signingConfigs {
        release {
            if (System.getenv('GITHUB_WORKSPACE') != null) {
                storeFile file("${System.getenv('GITHUB_WORKSPACE')}/KEYSTORE.JKS")
                storePassword System.getenv('KEYSTORE_PASSWORD')
                keyAlias System.getenv('KEY_ALIAS')
                keyPassword System.getenv('KEY_PASSWORD')
            }
        }

        // Keys from release are being used anyway but whatever
        debug {
            if (System.getenv('GITHUB_WORKSPACE') != null) {
                storeFile file("${System.getenv('GITHUB_WORKSPACE')}/KEYSTORE.JKS")
                storePassword System.getenv('KEYSTORE_PASSWORD')
                keyAlias System.getenv('KEY_ALIAS')
                keyPassword System.getenv('KEY_PASSWORD')
            }
        }
    }

    lint {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }

    buildFeatures {
        buildConfig true
        viewBinding true
    }

    buildTypes {
        release {
            shrinkResources false
            // XPL-EX loads hooks, Lua bridges and JSON-backed classes dynamically.
            // R8 breaks this runtime path even when the app classes are kept, so
            // release must preserve the same hook behavior as the working debug APK.
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            if (signingConfigs.release.storeFile) {
                signingConfig signingConfigs.release
            }
        }

        debug {
            debuggable true
            shrinkResources false
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            if (signingConfigs.release.storeFile) {
                signingConfig signingConfigs.release
            }
        }
    }


    packaging {
        resources {
            excludes += ['META-INF/kotlinx_coroutines_core.version', 'META-INF/versions/**', 'META-INF/*.kotlin_module']
            pickFirsts += ['META-INF/kotlinx_coroutines_core.version', 'META-INF/INDEX.LIST']
            merges += ['META-INF/xposed/java_init.list', 'META-INF/xposed/module.prop', 'META-INF/xposed/scope.list']
        }
    }
}

dependencies {
    //    def material_version = "1.3.0"
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    def appcompat_version = "1.7.1"
    def swiperefresh_version = "1.1.0"
    def recyclerview_version = "1.4.0"
    def constraintlayout_version = "2.2.1"
    def material_version = "1.12.0"
    def glide_version = "4.11.0"

    implementation fileTree(dir: 'libs', include: ['*.jar'])


    implementation 'com.google.android.flexbox:flexbox:3.0.0'

    implementation 'me.zhanghai.android.fastscroll:library:1.3.0'

    //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'

    implementation 'androidx.core:core:1.17.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.9.3'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.9.3'
    implementation 'androidx.profileinstaller:profileinstaller:1.4.0'

    // https://mvnrepository.com/artifact/androidx.appcompat/appcompat
    implementation "androidx.appcompat:appcompat:$appcompat_version"

    // https://mvnrepository.com/artifact/androidx.swiperefreshlayout/swiperefreshlayout
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefresh_version"

    // https://mvnrepository.com/artifact/androidx.recyclerview/recyclerview
    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
    //implementation "androidx.recyclerview:recyclerview-selection:$recyclerview_version"

    // https://mvnrepository.com/artifact/androidx.constraintlayout/constraintlayout
    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"

    // https://mvnrepository.com/artifact/com.google.android.material/material
    implementation "com.google.android.material:material:$material_version"

    // https://bumptech.github.io/glide/
    // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
    // { exclude group: "com.android.support" }
    implementation("com.github.bumptech.glide:glide:$glide_version") {
        exclude group: "com.android.support"
    }
    annotationProcessor 'androidx.annotation:annotation:1.1.0'
    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"

    // Supplied by LSPosed 2.1.1 at runtime; never package the API implementation in the APK.
    compileOnly 'io.github.libxposed:api:101.0.1'
    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:4.3'

    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.14.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20240303'

    def coreVersion = "5.0.2"
    implementation "com.github.topjohnwu.libsu:core:$coreVersion"
    implementation "com.github.topjohnwu.libsu:service:$coreVersion"
    implementation "com.github.topjohnwu.libsu:nio:$coreVersion"




    // http://www.luaj.org/luaj/3.0/README.html
    // https://mvnrepository.com/artifact/org.luaj/luaj-jse
    // implementation 'org.luaj:luaj-jse:3.0.1'
}
